# TEST_RGB_EVE

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  main.c  tft.c
main/EVE/: EVE_commands.c  EVE_commands.h  EVE_config.h  EVE_target.c  EVE_target.h  mycfg.h
